--- a/l10n_it_vat_registries/wizard/print_registro_iva.xml
+++ b/l10n_it_vat_registries/wizard/print_registro_iva.xml
@@ -11,6 +11,7 @@
                     <field name="type" on_change="on_type_changed(type)"/>
                     <field name="tax_sign"/>
                     <field name="fiscal_page_base"/>
+                    <field name="order_by_date"/>
                     <separator string="Periods" colspan="4"/>
                     <field name="period_ids" colspan="4" nolabel="1" height="250"/>
                     <separator string="Journals" colspan="4"/>
