--- a/sale_direct_buy/views/inherit_sale_order.xml
+++ b/sale_direct_buy/views/inherit_sale_order.xml
@@ -37,7 +37,7 @@
                 </xpath>
                 <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/form//field[@name='name']" position="after">
                     <field name="supplier_ids" invisible="1" />
-                    <field name="supplier_id"
+                    <field name="supplier_id" domain="[('id', 'in', supplier_ids)]"
                         context="{'search_product_id': product_id}"
                         on_change="product_id_change(parent.pricelist_id, product_id, product_uom_qty, product_uom, product_uos_qty, product_uos, name, parent.partner_id, False, True, parent.date_order, product_packaging, parent.fiscal_position, False, supplier_id, extra_purchase_discount, False)"
                         attrs="{'readonly': [('product_id','=',False)]}"
