--- a/sale_order_section/views/sale_view.xml
+++ b/sale_order_section/views/sale_view.xml
@@ -7,10 +7,9 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="type">form</field>
-            <field name="priority" eval="31"/>
+            <field name="priority" eval="3001"/>
             <field name="arch" type="xml">
                 <data>
-
                     <field name="pricelist_id" position="after">
                         <group colspan="3" col="12" string="Stampa">
                             <field name="view_total" invisible="1"/>
@@ -78,6 +77,10 @@
                            position="attributes">
                         <attribute name="colors">aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';</attribute>
                     </xpath>
+
+                    <field name="order_line" position="attributes">
+                        <attribute name="context">{'no_create_product': True, 'partner_id': partner_id, 'pricelist_id': pricelist_id, 'date_order': date_order, 'fiscal_position': fiscal_position, 'order_id': id, 'order_line_base_ids': order_line_base_ids, 'shop_id': shop_id, 'default_order_id': active_id, 'pricelist_id': pricelist_id}</attribute>
+                    </field>
 
                     <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/tree//field[@name='name']"
                            position="before">
