--- a/sale_order_requirement/views/sale_order_view.xml
+++ b/sale_order_requirement/views/sale_order_view.xml
@@ -17,7 +17,7 @@
                     <field colspan="4" name="mrp_production_ids" nolabel="1" context="{'view_print': True}" groups="stock.group_stock_user"/>
                 </xpath>
                 <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/form/notebook" position="inside">
-                    <page string="Sale Order Lines">
+                    <page string="Order Requirement Line">
                         <field colspan="4" name="order_requirement_line_ids" nolabel="1" />
                     </page>
                 </xpath>
