--- a/work_order/views/stock_picking_view.xml
+++ b/work_order/views/stock_picking_view.xml
@@ -9,7 +9,7 @@
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <field name="stock_journal_id" position="after">
-                    <field name="project_id" on_change="onchange_account_id(project_id)" attrs="{'invisible': [('sale_id','!=',False), ('account_id','!=',False)]}" groups="analytic.group_analytic_accounting"/>
+                    <field name="project_id" on_change="onchange_account_id(project_id, context)" attrs="{'invisible': [('sale_id','!=',False), ('account_id','!=',False)]}" groups="analytic.group_analytic_accounting"/>
                     <field name="account_id" attrs="{'invisible': ['|', ('sale_id','!=',False), ('project_id','!=',False)]}" groups="analytic.group_analytic_accounting"/>
                     <field name="sale_project" attrs="{'invisible': [('sale_id','=',False)]}" groups="analytic.group_analytic_accounting"/>
                 </field>
@@ -23,7 +23,7 @@
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <field name="backorder_id" position="after">
-                    <field name="project_id" on_change="onchange_account_id(project_id)" attrs="{'invisible': [('sale_id','!=',False), ('account_id','!=',False)]}" groups="analytic.group_analytic_accounting"/>
+                    <field name="project_id" on_change="onchange_account_id(project_id, context)" attrs="{'invisible': [('sale_id','!=',False), ('account_id','!=',False)]}" groups="analytic.group_analytic_accounting"/>
                     <field name="account_id" attrs="{'invisible': ['|', ('sale_id','!=',False), ('project_id','!=',False)]}" groups="analytic.group_analytic_accounting"/>
                     <field name="sale_project" attrs="{'invisible': [('sale_id','=',False)]}" groups="analytic.group_analytic_accounting"/>
                 </field>
