--- a/work_order/views/sale_order_view.xml
+++ b/work_order/views/sale_order_view.xml
@@ -9,7 +9,7 @@
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <field name="project_id" position="replace">
-                    <field name="project_project" context="{'model': 'sale.order', 'name': name, 'partner_id': partner_id}" groups="project.group_project_user" />
+                    <field name="project_project" context="{'model': 'sale.order', 'name': name, 'partner_id': partner_id, 'default_contact_id': partner_order_id, 'default_pricelist_id': pricelist_id}"  groups="project.group_project_user" />
                 </field>
                 <xpath expr="//separator[@string='Invoices']"  position="before">
                     <group groups="project.group_project_user" >
@@ -27,7 +27,7 @@
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <field name="project_id" position="replace">
-                    <field name="project_project" context="{'model': 'sale.order', 'name': name, 'partner_id': partner_id}" groups="project.group_project_user" />
+                    <field name="project_project" context="{'model': 'sale.order', 'name': name, 'partner_id': partner_id, 'default_contact_id': partner_order_id, 'default_pricelist_id': pricelist_id}" groups="project.group_project_user" />
                 </field>
             </field>
         </record>
