--- a/crm_lead_correct/views/crm_opportunity_view.xml
+++ b/crm_lead_correct/views/crm_opportunity_view.xml
@@ -39,11 +39,16 @@
                             type="object" icon="gtk-go-forward" string="" context="{'stage_type': 'opportunity'}"/>
                     </group>
                     <field name="user_id"/>
-                    <field name="sale_order" invisible="1"/>
-                    <group colspan="1" col="1">
-                        <button string="Convert to Quote" icon="gtk-go-forward" name="%(sale_crm.action_crm_make_sale)d" type="action" attrs="{'invisible': [('sale_order', '!=', False)]}"/>
+
+
+                    <group colspan="1" col="1" string="Sale Order">
+                        <field name="visible_sale_order_id" invisible="1"/>
+                        <field name="sale_order_id" domain="[('partner_id', '=', partner_id)]" on_change="onchange_sale_order_id(sale_order_id, context)"
+                               nolabel="1" attrs="{'invisible': [('visible_sale_order_id', '=', False)]}" groups="base.group_sale_manager"/>
+                        <button string="Convert to Quote" icon="gtk-go-forward" name="%(sale_crm.action_crm_make_sale)d" type="action"
+                                attrs="{'invisible': [('sale_order_id', '!=', False)]}"/>
                         <button name="action_view_sale_order" string="View Sale Order" type="object"
-                                        attrs="{'invisible': [('sale_order', '=', False)]}" />
+                                        attrs="{'invisible': [('sale_order_id', '=', False)]}" />
                         <!--<button name="%(sale.report_sale_order)d" string="Print Quotation" type="action"-->
                                                     <!--icon="gtk-print" context="{'report_toprint_id': sale_order}"-->
                                                     <!--attrs="{'invisible':[('sale_order', '=', False)]}"/>-->
@@ -200,7 +205,7 @@
                     <field name="ref2"/>
                 </page>
                 <page string="Sale Order" >
-                    <field name="sale_order_ids" mode="tree" nolabel="1" context="{'own_sale_id': sale_order}">
+                    <field name="sale_order_ids" mode="tree" nolabel="1" context="{'own_sale_id': sale_order_id}">
                         <tree string="History" colors="green:connected_sale_order == True">
                             <field name="connected_sale_order" invisible="1"/>
                             <field name="shop_id" />
