--- a/hr_expense_extended/views/hr_expense_view.xml
+++ b/hr_expense_extended/views/hr_expense_view.xml
@@ -61,7 +61,7 @@
             <field name="inherit_id" ref="hr_timesheet.view_hr_timesheet_employee"/>
             <field name="arch" type="xml">
                 <field name="employee_id" position="replace">
-                    <field name="employee_id" colspan="3" groups="base.group_hr_manager"/>
+                    <field name="employee_id" colspan="3" groups="base.group_hr_user"/>
                 </field>
             </field>
         </record>
