--- a/crm_lead_correct/wizard/crm_meeting_by_province_view.xml
+++ b/crm_lead_correct/wizard/crm_meeting_by_province_view.xml
@@ -12,6 +12,7 @@
                     <field name="date_from" colspan="2"/>
                     <field name="date_to" colspan="2"/>
                 </group>
+                <field name="user_id" groups="base.group_sale_salesman_all_leads"/>
                 <newline/>
                 <newline/>
                 <newline/>
