--- a/crm_lead_correct/views/crm_lead_view.xml
+++ b/crm_lead_correct/views/crm_lead_view.xml
@@ -31,6 +31,8 @@
                             />
                         </group>
                         <newline/>
+                        <field name="date_action"/>
+                        <field name="title_action"/>
                         <field name="user_id"/>
                         <field name="section_id" widget="selection"/>
 <!--                        <field name="stage_id" domain="section_id and [('section_ids', '=', section_id)] or []"/>-->
@@ -244,7 +246,8 @@
                     <field name="region"/>
                     <field name="email_from"/>
                     <field name="phone"/>
-
+                    <field name="date_action"/>
+                    <field name="title_action" />
                     <field name="categ_id" invisible="1"/>
                     <field name="partner_category_id" widget="selection"/>
                     <field name="type_id" invisible="1"/>
