--- a/product_pricelist_extended/views/product_pricelist_view.xml
+++ b/product_pricelist_extended/views/product_pricelist_view.xml
@@ -15,6 +15,8 @@
                 </field>
                 <field name="version_id" position="after">
                     <field name="partner_ids" colspan="4" nolabel="1"/>
+                    <separator colspan="4" string="User"/>
+                    <field name="member_ids" nolabel="1" colspan="4" widget="many2many_checkboxes"/>
                 </field>
             </field>
         </record>
