--- a/crm_lead_correct/views/crm_lead_view.xml
+++ b/crm_lead_correct/views/crm_lead_view.xml
@@ -104,7 +104,7 @@
                                 <separator string="Links" colspan="4" col="3"/>
                                 <field name="partner_id" string="Customer"
                                        options="{&quot;create_name_field&quot;: &quot;name&quot;}"
-                                       context="{'default_name': contact_name, 'default_street': street, 'default_city': city, 'default_zip': zip, 'default_country_id': country_id, 'default_function': function, 'default_phone': phone, 'default_mobile': mobile, 'default_fax': fax, 'default_email': email_from, 'default_user_id': user_id, 'default_section_id': section_id}"/>
+                                       context="{'default_name': contact_name, 'default_street': street, 'default_city': city, 'default_zip': zip, 'default_country_id': country_id, 'default_function': function, 'default_phone': phone, 'default_mobile': mobile, 'default_fax': fax, 'default_user_id': user_id, 'default_section_id': section_id}"/>
                                 <button
                                         name="%(crm.action_crm_lead2partner)d"
                                         icon="terp-partner" type="action"
