[FIX] account_invoice_filter: Removed new code because it generates error: View definition error for inherited view 'account_invoice_filter.view_account_invoice_filter_by_year' on model 'account.invoice': Element '<field name="supplier_invoice_number">' not found in parent view '%(parent_xml_id)s'

--- a/account_invoice_filter/views/account_invoice_view.xml
+++ b/account_invoice_filter/views/account_invoice_view.xml
@@ -8,9 +8,9 @@
             <field name="inherit_id" ref="account.view_account_invoice_filter"/>
             <field name="type">search</field>
             <field name="arch" type="xml">
-                <field name="supplier_invoice_number" position="replace">
-                    <field name="supplier_invoice_number" invisible="context.get('type') != 'in_invoice'" />
-                </field>
+<!--                <field name="supplier_invoice_number" position="replace">-->
+<!--                    <field name="supplier_invoice_number" invisible="context.get('type') != 'in_invoice'" />-->
+<!--                </field>-->
                 <filter name="unpaid" position="after">
                     <separator orientation="vertical"/>
                     <filter icon="terp-go-month"
