--- a/core_extended/views/cron_view.xml
+++ b/core_extended/views/cron_view.xml
@@ -3,7 +3,7 @@
     <data>
         <record id="action_deactivate" model="ir.actions.server">
             <field name="name">Deactivate Actions</field>
-            <field name="model_id" ref="model_ir_cron"/>
+            <field name="model_id" ref="base.model_ir_cron"/>
             <field name="state">code</field>
             <field name="code">self.action_disable_active(cr, uid, context=context)</field>
         </record>
