--- a/account_invoice_extended/views/account_journal_view.xml
+++ b/account_invoice_extended/views/account_journal_view.xml
@@ -10,6 +10,7 @@
             <field name="arch" type="xml">
                 <field name="type" position="after">
                     <field name="sequence" />
+                    <field name="active" />
                 </field>
             </field>
         </record>
