--- a/sale_order_section/views/sale_view.xml
+++ b/sale_order_section/views/sale_view.xml
@@ -59,6 +59,8 @@
                                 <button name="action_check" string="Corrente" type="object" icon="gtk-apply"
                                         attrs="{'invisible': [('is_store','==', 0)]}"/>
                                 <field name="subtotal" sum="totale"/>
+                                <field name="subtotal_cost" sum="totale" groups="sale.view_margin"/>
+                                <field name="subtotal_margin" sum="totale" groups="sale.view_margin"/>
                             </tree>
                         </field>
                     </field>
