[REF] sale_order_modify_confirmed_service: set readonly price_unit

--- a/sale_order_modify_confirmed_service/wizard/wizard_modify_order.xml
+++ b/sale_order_modify_confirmed_service/wizard/wizard_modify_order.xml
@@ -24,7 +24,7 @@
                             <tree string="Order Line" editable="bottom">
                                 <field name="name" invisible="1"/>
                                 <field name="product_id" attrs="{'readonly': [('line_id', '!=', False)]}"/>
-                                <field name="price_unit" />
+                                <field name="price_unit" attrs="{'readonly': [('line_id', '!=', False)]}"/>
                                 <field name="discount" attrs="{'readonly': [('line_id', '!=', False)]}"/>
                                 <field name="line_id" invisible="1" />
                                 <field name="purchase_price" />
