--- a/project_extended/views/project.xml
+++ b/project_extended/views/project.xml
@@ -38,6 +38,8 @@
                                 <field name="planned_hours" widget="float_time" sum="Planned Hours"/>
                                 <field name="effective_hours" widget="float_time" sum="Spent Hours" invisible="1"/>
                                 <field name="remaining_hours" widget="float_time" sum="Remaining Hours"/>
+                                <field name="date_start"/>
+                                <field name="date_end"/>
                                 <field name="date_deadline"/>
                                 <field name="type_id"/>
                                 <field name="state"/>
