--- a/l10n_it_ade/views/account_tax_view.xml
+++ b/l10n_it_ade/views/account_tax_view.xml
@@ -2,6 +2,18 @@
 <openerp>
     <data>
 
+        <record id="view_tax_tree_inherit" model="ir.ui.view">
+            <field name="name">account.tax.tree</field>
+            <field name="model">account.tax</field>
+            <field name="inherit_id" ref="account.view_tax_tree"></field>
+            <field name="priority">10</field>
+            <field name="arch" type="xml">
+                <field name="company_id" position="after">
+                    <field name="non_taxable_nature"/>
+                </field>
+            </field>
+        </record>
+
         <record id="view_tax_form" model="ir.ui.view">
             <field name="name">account.tax.form</field>
             <field name="model">account.tax</field>
